<resources>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="app_name">FitnessApp</string>
    <string name="back_button_description">back button</string>
    <string name="play_button_description">play button</string>
    <string name="pause_button_description">pause button</string>
    <string name="reset_button_description">reset button</string>
    <string name="blank"> </string>

    <string name="stopwatch_default_text">00:00:00</string>
    <string name="stopwatch_default_milliseconds">000</string>
    <string name="stopwatch_title">Stopwatch</string>

    <string name="timer_default_text">00:00:00</string>
    <string name="timer_default_milliseconds">000</string>
    <string name="timer_title">Countdown Timer</string>

    <string name="tabata_timer_title">Tabata (Interval) Timer</string>
    <string name="default_tabata_timer"> </string>
    <string name="get_ready">Get Ready..</string>
    <string name="congrats">Good Job!..</string>
    <string name="minutes">Minutes</string>
    <string name="rest">Rest</string>
    <string name="work">Work</string>
    <string name="rest_default">Rest(sec)</string>
    <string name="work_default">Work(sec)</string>
    <string name="minutes_template">Minutes: %1$d</string>
    <string name="work_template">Work: %1$d sec</string>
    <string name="rest_template">Rest: %1$d sec</string>
    <string name="back_button">back_button</string>
    <string name="add">Add</string>
    <string name="instructions">instructions</string>
    <string name="musclegroup">muscleGroup</string>
    <string name="name">name</string>
    <string name="new_exercise">New Exercise</string>
    <string name="exercises">Exercises</string>
    <string name="sub_group_one_title">Sub Group One Title</string>
    <string name="sub_group_two_title">Sub Group Two Title</string>
    <string name="calendar">Calendar</string>
    <string name="timers">Timers</string>
    <string name="recipes">Recipes</string>
    <string name="log_out">log out</string>
    <string name="username">username</string>
    <string name="todays_date">todays date</string>
    <string name="new_recipe">New Recipe</string>
    <string name="ingredients">ingredients</string>
    <string name="create_password">Create Password</string>
    <string name="continue_button">Continue</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="tabata_timer">Tabata Timer</string>
    <string name="delete_button">delete button</string>
    <string name="name_colon">Name:</string>
    <string name="muscle_group_colon">Muscle Group:</string>
    <string name="instructions_colon">Instructions:</string>
    <string name="ingredients_colon">Ingredients:</string>
    <string name="exercises_a_z">Exercises (A-Z)</string>
    <string name="recipes_a_z">Recipes (A-Z)</string>
    <string name="recipeid_colon">RecipeId:</string>
    <string name="current_recipe_colon">Current Recipe:</string>
    <string name="none">None</string>
    <string name="run">Run</string>
    <string name="ai_gym_chat">AI Gym Chat</string>
    <string name="current_exercise_colon">Current Exercise:</string>
    <string name="overwrite">Overwrite</string>
    <string name="seconds">Seconds</string>
    <string name="hours">Hours</string>
    <string name="exitbutton">exitButton</string>
    <string name="save_changes">Save changes</string>
    <string name="save_and_keep_original">save and KEEP original</string>
    <string name="save_and_delete_original">save and DELETE original</string>
    <string name="my_cards">My Cards</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_does_not_have_to_be_unique">Username(does not have to be unique)</string>
    <string name="username_unique">Username(unique)</string>
    <string name="can_t_change_email">can\'t change email for security purposes</string>
    <string name="save">Save</string>
    <string name="change_username">Change Username</string>
    <string name="_7_day_snapshot">7 Day Snapshot</string>
    <string name="replace">Replace</string>
    <string name="add_new_card">Add New Card</string>
    <string name="replace_this_card">Replace This Card</string>
    <string name="password_no_restrictions_message">No restrictions on Password, just pick something you always remember</string>
    <string name="resets_upon_exit">Resets upon exit</string>
    <string name="comments">Comments?</string>
    <string name="submit_a_comment_to_admin">Submit a comment to admin (Anonymous)</string>
    <string name="delete_account">Delete Account</string>
    <string name="removes_email_and_all_associated_informatioin_and_cards_from_database">Removes email and all associated informatioin and cards from Database</string>
    <string name="cancel">Cancel</string>
    <string name="photo_of_item">Photo of item</string>
    <string name="save_as_new">Save as New</string>
    <string name="public_snapshot">Public Snapshot</string>
    <string name="revamp_with_ai">Revamp with AI</string>
</resources>