<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background_dark_circle"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:background="@android:color/transparent"
        android:onClick="onBackButtonClick"
        android:contentDescription="@string/back_button"
        android:padding="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipes"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <!-- make sure dependency is added in build.gradle.kts (Module) -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="bottom"
                android:textColorHint="@color/white"
                android:hint="@string/name"/>
            <EditText
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="bottom"
                android:textColorHint="@color/white"
                android:hint="@string/ingredients"/>
            <EditText
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="bottom"
                android:textColorHint="@color/white"
                android:hint="@string/instructions"/>
            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_margin="50dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>