<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark_circle">
    <ImageButton
        android:id="@+id/backButton"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_white"
        android:background="@android:color/transparent"
        android:onClick="onBackButtonClick"
        android:contentDescription="@string/back_button"
        android:padding="20dp" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/login"
        android:src="@drawable/ic_person_60"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_white_outline">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/Email"
                    android:textSize = "22sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text = "@string/Email"
                    android:textSize = "20sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/can_t_change_email"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_white_outline_clear">
                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "Username"
                    android:textSize = "24sp"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text = "@string/username"
                    android:textSize = "20sp"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/changeUsernameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:background="@drawable/background_grey_outline"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:text="@string/change_username" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/commentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_white_outline">
                <TextView
                    android:id="@+id/commentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/comments"
                    android:textSize = "24sp"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:hint = "@string/submit_a_comment_to_admin"
                    android:textSize = "20sp"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/commentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:background="@drawable/background_grey_outline"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:text="@string/add" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/deleteProfileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@drawable/background_white_outline_clear">
                <TextView
                    android:id="@+id/deleteAccountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/delete_account"
                    android:textSize = "24sp"
                    android:textStyle="bold"
                    android:textColor="#99FF0000"/>
                <TextView
                    android:id="@+id/deleteAccountTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:text = "@string/removes_email_and_all_associated_informatioin_and_cards_from_database"
                    android:textSize = "20sp"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/deleteAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="75dp"
                    android:background="@drawable/background_red_with_white_outlined"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:text="Hold to Delete Account" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>