<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_white"
        android:padding="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"/>+
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="32sp"
                android:textColor="@color/white"/>
            <!-- Sub Group Two Details -->
            <TextView
                android:id="@+id/subGroupOneTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sub_group_one_title"
                android:textSize="28sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/subGroupOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <!-- Instructions Details -->
            <TextView
                android:id="@+id/subGroupTwoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sub_group_two_title"
                android:textSize="28sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/subGroupTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="30dp"
                android:layout_gravity="end"
                android:text="@string/save_and_keep_original"
                android:textColor="@color/white"
                android:visibility="gone"
                android:background="@drawable/background_grey_rounded_corners"/>
            <Button
                android:id="@+id/replaceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="30dp"
                android:layout_gravity="end"
                android:text="@string/save_and_delete_original"
                android:textColor="@color/white"
                android:visibility="gone"
                android:background="@drawable/background_grey_rounded_corners"/>

        </LinearLayout>
    </ScrollView>




</LinearLayout>